tests/testcases/errors/BCE0126-6.boo
"""
BCE0126-6.boo(7,10): BCE0126: It is not possible to evaluate an expression of type 'void'.
"""
def foo() as void:
	pass
	
print foo() == true
